####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = sprites 

EXTRA_DIST = aide.png annuler.png attackOne.png attackThree.png attackTwo.png defendOne.png defendTwo.png distributionArmeesFinie.png distributionArmees.png joueurSuivant.png logoLeft.png logoRight.png map.png moveArmies.png moveBackFive.png moveBackOne.png moveBackTen.png moveFinish.png moveFive.png moveOne.png moveTen.png nouveauJeu.png ouvrirJeu.png pool-en.png pool.png quitter.png SoldatAGenoux1.png map-mask.png saveGame.png newNetGame.png

default_skin_dir = $(kde_datadir)/ksirk/skins/default

install-data-local:
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/aide.png $(default_skin_dir)/Images/aide.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/annuler.png $(default_skin_dir)/Images/annuler.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/attackOne.png $(default_skin_dir)/Images/attackOne.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/attackThree.png $(default_skin_dir)/Images/attackThree.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/attackTwo.png $(default_skin_dir)/Images/attackTwo.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/defendOne.png $(default_skin_dir)/Images/defendOne.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/defendTwo.png $(default_skin_dir)/Images/defendTwo.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/distributionArmeesFinie.png $(default_skin_dir)/Images/distributionArmeesFinie.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/distributionArmees.png $(default_skin_dir)/Images/distributionArmees.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/joueurSuivant.png $(default_skin_dir)/Images/joueurSuivant.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/logoLeft.png $(default_skin_dir)/Images/logoLeft.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/logoRight.png $(default_skin_dir)/Images/logoRight.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/map.png $(default_skin_dir)/Images/map.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/moveArmies.png $(default_skin_dir)/Images/moveArmies.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/moveBackFive.png $(default_skin_dir)/Images/moveBackFive.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/moveBackOne.png $(default_skin_dir)/Images/moveBackOne.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/moveBackTen.png $(default_skin_dir)/Images/moveBackTen.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/moveFinish.png $(default_skin_dir)/Images/moveFinish.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/moveFive.png $(default_skin_dir)/Images/moveFive.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/moveOne.png $(default_skin_dir)/Images/moveOne.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/moveTen.png $(default_skin_dir)/Images/moveTen.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/nouveauJeu.png $(default_skin_dir)/Images/nouveauJeu.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/newNetGame.png $(default_skin_dir)/Images/newNetGame.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/ouvrirJeu.png $(default_skin_dir)/Images/ouvrirJeu.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/pool-en.png $(default_skin_dir)/Images/pool-en.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/pool.png $(default_skin_dir)/Images/pool.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/quitter.png $(default_skin_dir)/Images/quitter.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/SoldatAGenoux1.png $(default_skin_dir)/Images/SoldatAGenoux1.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/map-mask.png $(default_skin_dir)/Images/map-mask.png
	$(mkinstalldirs) $(default_skin_dir)/Images/
	$(INSTALL_DATA) $(srcdir)/saveGame.png $(default_skin_dir)/Images/saveGame.png
		
uninstall-local:
	-rm -f $(default_skin_dir)/Images/aide.png
	-rm -f $(default_skin_dir)/Images/annuler.png
	-rm -f $(default_skin_dir)/Images/attackOne.png
	-rm -f $(default_skin_dir)/Images/attackThree.png
	-rm -f $(default_skin_dir)/Images/attackTwo.png
	-rm -f $(default_skin_dir)/Images/defendOne.png
	-rm -f $(default_skin_dir)/Images/defendTwo.png
	-rm -f $(default_skin_dir)/Images/distributionArmeesFinie.png
	-rm -f $(default_skin_dir)/Images/distributionArmees.png
	-rm -f $(default_skin_dir)/Images/joueurSuivant.png
	-rm -f $(default_skin_dir)/Images/logo.gif
	-rm -f $(default_skin_dir)/Images/logoLeft.png
	-rm -f $(default_skin_dir)/Images/logoRight.png
	-rm -f $(default_skin_dir)/Images/map.png
	-rm -f $(default_skin_dir)/Images/moveArmies.png
	-rm -f $(default_skin_dir)/Images/moveBackFive.png
	-rm -f $(default_skin_dir)/Images/moveBackOne.png
	-rm -f $(default_skin_dir)/Images/moveBackTen.png
	-rm -f $(default_skin_dir)/Images/moveFinish.png
	-rm -f $(default_skin_dir)/Images/moveFive.png
	-rm -f $(default_skin_dir)/Images/moveOne.png
	-rm -f $(default_skin_dir)/Images/moveTen.png
	-rm -f $(default_skin_dir)/Images/nouveauJeu.png
	-rm -f $(default_skin_dir)/Images/newNetGame.png
	-rm -f $(default_skin_dir)/Images/ouvrirJeu.png
	-rm -f $(default_skin_dir)/Images/pool-en.png
	-rm -f $(default_skin_dir)/Images/pool.png
	-rm -f $(default_skin_dir)/Images/quitter.png
	-rm -f $(default_skin_dir)/Images/SoldatAGenoux1.png
	-rm -f $(default_skin_dir)/Images/map-mask.png
	-rm -f $(default_skin_dir)/Images/saveGame.png

####### kdevelop will overwrite this part!!! (end)############
