####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = 8020.png belgium.png cannon.png cavalry.png exploding.png firing.png france.png infantry.png italy.png japan.png uk.png us.png 

default_skin_dir = $(kde_datadir)/ksirk/skins/default

install-data-local:
	$(mkinstalldirs) $(default_skin_dir)/Images/sprites/
	$(INSTALL_DATA) $(srcdir)/8020.png $(default_skin_dir)/Images/sprites/8020.png
	$(mkinstalldirs) $(default_skin_dir)/Images/sprites/
	$(INSTALL_DATA) $(srcdir)/belgium.png $(default_skin_dir)/Images/sprites/belgium.png
	$(mkinstalldirs) $(default_skin_dir)/Images/sprites/
	$(INSTALL_DATA) $(srcdir)/cannon.png $(default_skin_dir)/Images/sprites/cannon.png
	$(mkinstalldirs) $(default_skin_dir)/Images/sprites/
	$(INSTALL_DATA) $(srcdir)/cavalry.png $(default_skin_dir)/Images/sprites/cavalry.png
	$(mkinstalldirs) $(default_skin_dir)/Images/sprites/
	$(INSTALL_DATA) $(srcdir)/exploding.png $(default_skin_dir)/Images/sprites/exploding.png
	$(mkinstalldirs) $(default_skin_dir)/Images/sprites/
	$(INSTALL_DATA) $(srcdir)/firing.png $(default_skin_dir)/Images/sprites/firing.png
	$(mkinstalldirs) $(default_skin_dir)/Images/sprites/
	$(INSTALL_DATA) $(srcdir)/france.png $(default_skin_dir)/Images/sprites/france.png
	$(mkinstalldirs) $(default_skin_dir)/Images/sprites/
	$(INSTALL_DATA) $(srcdir)/infantry.png $(default_skin_dir)/Images/sprites/infantry.png
	$(mkinstalldirs) $(default_skin_dir)/Images/sprites/
	$(INSTALL_DATA) $(srcdir)/italy.png $(default_skin_dir)/Images/sprites/italy.png
	$(mkinstalldirs) $(default_skin_dir)/Images/sprites/
	$(INSTALL_DATA) $(srcdir)/japan.png $(default_skin_dir)/Images/sprites/japan.png
	$(mkinstalldirs) $(default_skin_dir)/Images/sprites/
	$(INSTALL_DATA) $(srcdir)/uk.png $(default_skin_dir)/Images/sprites/uk.png
	$(mkinstalldirs) $(default_skin_dir)/Images/sprites/
	$(INSTALL_DATA) $(srcdir)/us.png $(default_skin_dir)/Images/sprites/us.png

uninstall-local:
	-rm -f $(default_skin_dir)/Images/sprites/8020.png
	-rm -f $(default_skin_dir)/Images/sprites/belgium.png
	-rm -f $(default_skin_dir)/Images/sprites/cannon.png
	-rm -f $(default_skin_dir)/Images/sprites/cavalry.png
	-rm -f $(default_skin_dir)/Images/sprites/exploding.png
	-rm -f $(default_skin_dir)/Images/sprites/firing.png
	-rm -f $(default_skin_dir)/Images/sprites/france.png
	-rm -f $(default_skin_dir)/Images/sprites/infantry.png
	-rm -f $(default_skin_dir)/Images/sprites/italy.png
	-rm -f $(default_skin_dir)/Images/sprites/japan.png
	-rm -f $(default_skin_dir)/Images/sprites/uk.png
	-rm -f $(default_skin_dir)/Images/sprites/us.png

####### kdevelop will overwrite this part!!! (end)############
